--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.2d.tilemap.extras": "2.0.0",
     "com.unity.cinemachine": "2.7.9",
+    "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.render-pipelines.universal": "11.0.0",
     "com.unity.textmeshpro": "3.0.4",
